tests/baselines/reference/binaryArithmatic3.errors.txt
binaryArithmatic3.ts(1,9): error TS18050: The value 'undefined' cannot be used here.
binaryArithmatic3.ts(1,21): error TS18050: The value 'undefined' cannot be used here.


==== binaryArithmatic3.ts (2 errors) ====
    var v = undefined | undefined;
            ~~~~~~~~~
!!! error TS18050: The value 'undefined' cannot be used here.
                        ~~~~~~~~~
!!! error TS18050: The value 'undefined' cannot be used here.